# nostr_notes

./: .gitignore  Makefile  README.md  analysis_options.yaml  pubspec.yaml  simple_splash_view_usage.md
.claude/: settings.local.json
.github/workflows/: deploy_to_gh_io.yml  ios-testflight.yml  macos-testflight.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
assets/wasm/: aes_module.wasm
coverage/: lcov.info
cpp/: CMakeLists.txt
cpp/build-wasm/: CMakeCache.txt  Makefile  aes_module.wasm  cmake_install.cmake  crypto_module.wasm  exported_functions.txt
cpp/build-wasm/secp256k1/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cpp/build-wasm/secp256k1/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cpp/secp256k1/src/: util.h
cpp/src/: aes_256_cbc.cpp  aes_256_cbc.h  flags.h  main.cpp  nip04.cpp  nip04.h  secp_wrapper.cpp  secp_wrapper.h  tools.cpp  tools.h
cpp/src/base64/: base64.c  base64.h
cpp/tests/: test_aes_256_cbc.cpp  test_base64.cpp  test_main.cpp  test_nip04.cpp  test_secp_wrapper.cpp
fastlane/: .env  .env.example  Fastfile  Helpers  README.md  docker-compose.test-relay.yml  report.xml
integration_test/: registration_test.dart
integration_test/di/: test_app_di_overrides_proxy.dart
integration_test/test_helpers/: app_launcher.dart  pump_helpers.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/fastlane/: Appfile  Fastfile  Matchfile
lib/: main.dart
lib/app/: app_config.dart  sizes.dart
lib/app/di/: app_di.dart
lib/app/di/auth/: auth_di_scope.dart
lib/app/di/unauth/: db_module.dart  unauth_di_scope.dart
lib/app/icons/: app_icons.dart
lib/app/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  localization.dart
lib/app/router/: app_router.dart  app_router_path.dart  drawer_router.dart  note_router.dart
lib/app/theme/: app_color_scheme.dart  app_text_theme.dart  app_theme.dart  gpt_markdown_theme_data.dart  shimmer_colors.dart
lib/auth/: home_screen.dart
lib/auth/data/: common_event_storage_impl.dart  crypto_repo_impl.dart  get_pending_usecase_impl.dart  notes_repository_impl.dart  pin_enabled_repo_impl.dart  pin_keyboard_type_repo_impl.dart  relays_list_repo_impl.dart
lib/auth/domain/: create_note_usecase.dart  nip_04.dart
lib/auth/home_screen/: home_screen.dart
lib/auth/note/: note_screen.dart
lib/auth/notes_list/: notes_list.dart
lib/auth/settings/: settings_screen.dart
lib/common/data/: decryption_repository_impl.dart  event_publisher_impl.dart  key_tool_repository_impl.dart  relays_monitoring_usecase_impl.dart  secure_storage_impl.dart
lib/common/domain/: event_publisher.dart  relay_validator.dart  relays_monitoring_usecase.dart
lib/core/: event_kind.dart  one_to_many_map.dart  result.dart
lib/core/services/: channel_factory.dart  nostr_client.dart  nostr_event_creator.dart  nostr_event_ok_completer_map.dart  nostr_relay.dart  ws_channel.dart
lib/core/tools/: date_time_helper.dart  now.dart  optional_box.dart  result.dart
lib/experimental/: aes_cbc_impl_mobile.dart  aes_cbc_impl_web.dart  aes_cbc_repo.dart  some_func_widget.dart
lib/router/: app_router.dart
lib/services/: channel_factory.dart  hex_to_bytes.dart  nostr_client.dart  nostr_event_creator.dart  nostr_event_ok_completer_map.dart  nostr_relay.dart  ws_channel.dart
lib/services/crypto_service/: crypto_service.dart  crypto_service_impl_mobile.dart  crypto_service_impl_web.dart
lib/services/event_store/: drift_event_store.dart  nostr_filter_to_raw_event_query_mapper.dart  raw_event_store.dart
lib/services/key_tool/: bech32_tool.dart  key_tool.dart  nip04_decryptor.dart  nip04_encryptor.dart  nip04_service.dart  nip04_service_variant.dart  nip44.dart
lib/services/model/: base_nostr_event.dart  nostr_event.dart  nostr_event.g.dart  nostr_event_close.dart  nostr_event_eose.dart  nostr_event_ok.dart  nostr_filter.dart  nostr_filter.g.dart  nostr_req.dart
lib/services/nip44/: derive_keys.dart  nip44.dart  nip_44_utils.dart
lib/services/nostr_client/: channel_factory.dart  nostr_client.dart  nostr_event_ok_completer_map.dart  nostr_publisher.dart  nostr_relay.dart  outbox_publisher.dart  publish_event_report.dart  relay_monitoring.dart  single_relay_publisher.dart  ws_channel.dart
lib/unauth/: login_screen.dart
lib/unauth/domain/: blur_screen_usecase.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: Info.plist
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
macos/fastlane/: Fastfile  Matchfile
test/: widget_test.dart
test/auth/domain/: create_note_usecase_test.dart  delete_note_usecase_test.dart  note_crypto_use_case_test.dart
test/common/: relay_validator_test.dart
test/onboarding/presentation/: relay_input_text_field_test.dart  relay_tile_test.dart
test/services/: key_tool_test.dart  nostr_client_add_remove_relay_test.dart  nostr_client_publish_event_test.dart  nostr_client_request_response_test.dart  nostr_client_test.dart  nostr_event_tags_test.dart  nostr_req_test.dart
test/services/event_store/: nostr_filter_to_raw_event_query_mapper_test.dart  raw_event_store_handle_deletion_events_test.dart  raw_event_store_insert_replacable_test.dart  raw_event_store_search_test.dart
test/services/nip04/: nip04_test.dart
test/services/nip44/: nip44_test.dart
test/services/nostr_client/: nostr_client_add_remove_relay_test.dart  nostr_client_publish_event_test.dart  nostr_req_test.dart  outbox_publisher_test.dart  relay_monitoring_test.dart
test/tools/: mock_error_messages_provider.dart  mock_wschannel.dart  some_moked_data.dart
test/tools/di/: drift_scope.dart  in_memory_db_module.dart
test/tools/mocks/: mock_relays_list_repo.dart
test/unauth/domain/: blur_screen_usecase_test.dart  nsec_validator_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+206 files in other folders)
